--- a/dev/index.html
+++ b/dev/index.html
@@ -225,7 +225,7 @@
     </div>
     <div class="portfolio" id="portfolio">
       <div class="portfolio__wrapper">
-            <div class="portfolio__prevItem">
+            <div class="portfolio__prevItem" data-slide="0">
               <div class="portfolioPrev portfolioPrev_travel">
                 <div class="portfolioPrev__descr"><span class="portfolioPrev__title subtitle">Fulwidth slides</span><span class="portfolioPrev__name text">Travel</span>
                   <div class="portfolioPrev__controls"><a class="portfolioPrev__popup" href="#travel">
@@ -243,11 +243,11 @@
                 </div>
               </div>
             </div>
-            <div class="portfolio__slideItem portfolioItem mfp-hide" id="travel">
+            <div class="portfolio__slideItem portfolioItem" id="travel" data-slide="0">
                   <div class="title portfolioItem__title">
                     <h2 class="title__main">Travel</h2>
                   </div>
-              <div class="portfolioItem__slider single-item">
+              <div class="portfolioItem__slider">
                 <div class="portfolioItem__pic portfolioItem__pic_1">Slide1 text</div>
                 <div class="portfolioItem__pic portfolioItem__pic_2">Slide2 text</div>
                 <div class="portfolioItem__pic portfolioItem__pic_3">Slide3 text</div>
@@ -255,9 +255,9 @@
                 <div class="portfolioItem__pic portfolioItem__pic_5">Slide5 text</div>
               </div>
               <p class="portfolioItem__text text">Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum.</p>
-              <button class="portfolioItem__close closeBtn mfp-close">Close pop up</button>
+              <button class="portfolioItem__close closeBtn">Close pop up</button>
             </div>
-            <div class="portfolio__prevItem">
+            <div class="portfolio__prevItem" data-slide="1">
               <div class="portfolioPrev portfolioPrev_fashion">
                 <div class="portfolioPrev__descr"><span class="portfolioPrev__title subtitle">Fulwidth slides</span><span class="portfolioPrev__name text">Fashion</span>
                   <div class="portfolioPrev__controls"><a class="portfolioPrev__popup" href="#fashion">
@@ -275,11 +275,11 @@
                 </div>
               </div>
             </div>
-            <div class="portfolio__slideItem portfolioItem mfp-hide" id="fashion">
+            <div class="portfolio__slideItem portfolioItem" id="fashion" data-slide="1">
                   <div class="title portfolioItem__title">
                     <h2 class="title__main">Fashion</h2>
                   </div>
-              <div class="portfolioItem__slider single-item">
+              <div class="portfolioItem__slider">
                 <div class="portfolioItem__pic portfolioItem__pic_1">Slide1 text</div>
                 <div class="portfolioItem__pic portfolioItem__pic_2">Slide2 text</div>
                 <div class="portfolioItem__pic portfolioItem__pic_3">Slide3 text</div>
@@ -287,9 +287,9 @@
                 <div class="portfolioItem__pic portfolioItem__pic_5">Slide5 text</div>
               </div>
               <p class="portfolioItem__text text">Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum.</p>
-              <button class="portfolioItem__close closeBtn mfp-close">Close pop up</button>
+              <button class="portfolioItem__close closeBtn">Close pop up</button>
             </div>
-            <div class="portfolio__prevItem">
+            <div class="portfolio__prevItem" data-slide="2">
               <div class="portfolioPrev portfolioPrev_fantasy">
                 <div class="portfolioPrev__descr"><span class="portfolioPrev__title subtitle">Fulwidth slides</span><span class="portfolioPrev__name text">Fantasy</span>
                   <div class="portfolioPrev__controls"><a class="portfolioPrev__popup" href="#fantasy">
@@ -307,11 +307,11 @@
                 </div>
               </div>
             </div>
-            <div class="portfolio__slideItem portfolioItem mfp-hide" id="fantasy">
+            <div class="portfolio__slideItem portfolioItem" id="fantasy" data-slide="2">
                   <div class="title portfolioItem__title">
                     <h2 class="title__main">Fantasy</h2>
                   </div>
-              <div class="portfolioItem__slider single-item">
+              <div class="portfolioItem__slider">
                 <div class="portfolioItem__pic portfolioItem__pic_1">Slide1 text</div>
                 <div class="portfolioItem__pic portfolioItem__pic_2">Slide2 text</div>
                 <div class="portfolioItem__pic portfolioItem__pic_3">Slide3 text</div>
@@ -319,9 +319,9 @@
                 <div class="portfolioItem__pic portfolioItem__pic_5">Slide5 text</div>
               </div>
               <p class="portfolioItem__text text">Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum.</p>
-              <button class="portfolioItem__close closeBtn mfp-close">Close pop up</button>
+              <button class="portfolioItem__close closeBtn">Close pop up</button>
             </div>
-            <div class="portfolio__prevItem">
+            <div class="portfolio__prevItem" data-slide="3">
               <div class="portfolioPrev portfolioPrev_animate">
                 <div class="portfolioPrev__descr"><span class="portfolioPrev__title subtitle">Fulwidth slides</span><span class="portfolioPrev__name text">Animate</span>
                   <div class="portfolioPrev__controls"><a class="portfolioPrev__popup" href="#animate">
@@ -339,11 +339,11 @@
                 </div>
               </div>
             </div>
-            <div class="portfolio__slideItem portfolioItem mfp-hide" id="animate">
+            <div class="portfolio__slideItem portfolioItem" id="animate" data-slide="3">
                   <div class="title portfolioItem__title">
                     <h2 class="title__main">Animate</h2>
                   </div>
-              <div class="portfolioItem__slider single-item">
+              <div class="portfolioItem__slider">
                 <div class="portfolioItem__pic portfolioItem__pic_1">Slide1 text</div>
                 <div class="portfolioItem__pic portfolioItem__pic_2">Slide2 text</div>
                 <div class="portfolioItem__pic portfolioItem__pic_3">Slide3 text</div>
@@ -351,9 +351,9 @@
                 <div class="portfolioItem__pic portfolioItem__pic_5">Slide5 text</div>
               </div>
               <p class="portfolioItem__text text">Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum.</p>
-              <button class="portfolioItem__close closeBtn mfp-close">Close pop up</button>
+              <button class="portfolioItem__close closeBtn">Close pop up</button>
             </div>
-            <div class="portfolio__prevItem">
+            <div class="portfolio__prevItem" data-slide="4">
               <div class="portfolioPrev portfolioPrev_extreme">
                 <div class="portfolioPrev__descr"><span class="portfolioPrev__title subtitle">Fulwidth slides</span><span class="portfolioPrev__name text">Extreme</span>
                   <div class="portfolioPrev__controls"><a class="portfolioPrev__popup" href="#extreme">
@@ -371,11 +371,11 @@
                 </div>
               </div>
             </div>
-            <div class="portfolio__slideItem portfolioItem mfp-hide" id="extreme">
+            <div class="portfolio__slideItem portfolioItem" id="extreme" data-slide="4">
                   <div class="title portfolioItem__title">
                     <h2 class="title__main">Extreme</h2>
                   </div>
-              <div class="portfolioItem__slider single-item">
+              <div class="portfolioItem__slider">
                 <div class="portfolioItem__pic portfolioItem__pic_1">Slide1 text</div>
                 <div class="portfolioItem__pic portfolioItem__pic_2">Slide2 text</div>
                 <div class="portfolioItem__pic portfolioItem__pic_3">Slide3 text</div>
@@ -383,9 +383,9 @@
                 <div class="portfolioItem__pic portfolioItem__pic_5">Slide5 text</div>
               </div>
               <p class="portfolioItem__text text">Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum.</p>
-              <button class="portfolioItem__close closeBtn mfp-close">Close pop up</button>
+              <button class="portfolioItem__close closeBtn">Close pop up</button>
             </div>
-            <div class="portfolio__prevItem">
+            <div class="portfolio__prevItem" data-slide="5">
               <div class="portfolioPrev portfolioPrev_support">
                 <div class="portfolioPrev__descr"><span class="portfolioPrev__title subtitle">Fulwidth slides</span><span class="portfolioPrev__name text">Support</span>
                   <div class="portfolioPrev__controls"><a class="portfolioPrev__popup" href="#support">
@@ -403,11 +403,11 @@
                 </div>
               </div>
             </div>
-            <div class="portfolio__slideItem portfolioItem mfp-hide" id="support">
+            <div class="portfolio__slideItem portfolioItem" id="support" data-slide="5">
                   <div class="title portfolioItem__title">
                     <h2 class="title__main">Support</h2>
                   </div>
-              <div class="portfolioItem__slider single-item">
+              <div class="portfolioItem__slider">
                 <div class="portfolioItem__pic portfolioItem__pic_1">Slide1 text</div>
                 <div class="portfolioItem__pic portfolioItem__pic_2">Slide2 text</div>
                 <div class="portfolioItem__pic portfolioItem__pic_3">Slide3 text</div>
@@ -415,9 +415,9 @@
                 <div class="portfolioItem__pic portfolioItem__pic_5">Slide5 text</div>
               </div>
               <p class="portfolioItem__text text">Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum.</p>
-              <button class="portfolioItem__close closeBtn mfp-close">Close pop up</button>
+              <button class="portfolioItem__close closeBtn">Close pop up</button>
             </div>
-            <div class="portfolio__prevItem">
+            <div class="portfolio__prevItem" data-slide="6">
               <div class="portfolioPrev portfolioPrev_content">
                 <div class="portfolioPrev__descr"><span class="portfolioPrev__title subtitle">Fulwidth slides</span><span class="portfolioPrev__name text">Content</span>
                   <div class="portfolioPrev__controls"><a class="portfolioPrev__popup" href="#content">
@@ -435,11 +435,11 @@
                 </div>
               </div>
             </div>
-            <div class="portfolio__slideItem portfolioItem mfp-hide" id="content">
+            <div class="portfolio__slideItem portfolioItem" id="content" data-slide="6">
                   <div class="title portfolioItem__title">
                     <h2 class="title__main">Content</h2>
                   </div>
-              <div class="portfolioItem__slider single-item">
+              <div class="portfolioItem__slider">
                 <div class="portfolioItem__pic portfolioItem__pic_1">Slide1 text</div>
                 <div class="portfolioItem__pic portfolioItem__pic_2">Slide2 text</div>
                 <div class="portfolioItem__pic portfolioItem__pic_3">Slide3 text</div>
@@ -447,9 +447,9 @@
                 <div class="portfolioItem__pic portfolioItem__pic_5">Slide5 text</div>
               </div>
               <p class="portfolioItem__text text">Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum.</p>
-              <button class="portfolioItem__close closeBtn mfp-close">Close pop up</button>
+              <button class="portfolioItem__close closeBtn">Close pop up</button>
             </div>
-            <div class="portfolio__prevItem">
+            <div class="portfolio__prevItem" data-slide="7">
               <div class="portfolioPrev portfolioPrev_outsourcing">
                 <div class="portfolioPrev__descr"><span class="portfolioPrev__title subtitle">Fulwidth slides</span><span class="portfolioPrev__name text">Outsourcing</span>
                   <div class="portfolioPrev__controls"><a class="portfolioPrev__popup" href="#outsourcing">
@@ -467,11 +467,11 @@
                 </div>
               </div>
             </div>
-            <div class="portfolio__slideItem portfolioItem mfp-hide" id="outsourcing">
+            <div class="portfolio__slideItem portfolioItem" id="outsourcing" data-slide="7">
                   <div class="title portfolioItem__title">
                     <h2 class="title__main">Outsourcing</h2>
                   </div>
-              <div class="portfolioItem__slider single-item">
+              <div class="portfolioItem__slider">
                 <div class="portfolioItem__pic portfolioItem__pic_1">Slide1 text</div>
                 <div class="portfolioItem__pic portfolioItem__pic_2">Slide2 text</div>
                 <div class="portfolioItem__pic portfolioItem__pic_3">Slide3 text</div>
@@ -479,7 +479,7 @@
                 <div class="portfolioItem__pic portfolioItem__pic_5">Slide5 text</div>
               </div>
               <p class="portfolioItem__text text">Lorem ipsum dolor sicon adipiscing elit. Etiam antferme ntubero eget rorem interdum.</p>
-              <button class="portfolioItem__close closeBtn mfp-close">Close pop up</button>
+              <button class="portfolioItem__close closeBtn">Close pop up</button>
             </div>
       </div>
           <button class="btn portfolio__prevBtn btn btn_color_main btn_size_xs" id="showMore">Show more
@@ -791,17 +791,14 @@
           </div>
         </div>
       </div>
-    </footer>
-    <!-- build:js js/fast-libs.js-->
+    </footer><!-- build:js js/fast-libs.js-->
     <script src="static/js/jquery.js"></script>
-    <script src="static/libs/aos/aos.js"></script>
-    <!-- endbuild-->
-    <!-- build:js js/slow-libs.js async-->
+    <script src="static/libs/aos/aos.js"></script><!-- endbuild-->
+<!-- build:js js/slow-libs.js async-->
     <script src="static/libs/validate/jquery.validate.min.js"></script>
     <script src="static/libs/magnific/jquery.magnific-popup.min.js"></script>
     <script src="static/libs/slick/slick.min.js"></script>
-    <script src="static/js/main.js"></script>
-    <!-- endbuild-->
+    <script src="static/js/mainMy.js"></script><!-- endbuild-->
     <script>AOS.init({disable: 'mobile'})</script>
   </body>
 </html>
