--- a/dev/index.html
+++ b/dev/index.html
@@ -89,19 +89,19 @@
           <h2 class="about__numTitle title__main">Here’re some impressive numbers about us</h2>
           <div class="numPanel">
             <div class="about__numItem numItem">
-              <div class="numItem__val">7533</div>
+              <div class="numItem__val" id="num"> <span class="numItem__valNum">753</span></div>
               <p class="numItem__text text">Project Complate</p>
             </div>
             <div class="about__numItem numItem">
-              <div class="numItem__val">4222</div>
+              <div class="numItem__val"> <span class="numItem__valNum">422</span></div>
               <p class="numItem__text text">On Going Project</p>
             </div>
             <div class="about__numItem numItem">
-              <div class="numItem__val">6980 +</div>
+              <div class="numItem__val"> <span class="numItem__valNum">698</span><span>+</span></div>
               <p class="numItem__text text">Happy Client</p>
             </div>
             <div class="about__numItem numItem">
-              <div class="numItem__val">100%</div>
+              <div class="numItem__val"> <span class="numItem__valNum">100</span><span>%</span></div>
               <p class="numItem__text text">Positive Feedback</p>
             </div>
           </div>
@@ -228,15 +228,10 @@
             <div class="portfolio__prevItem" data-slide="0">
               <div class="portfolioPrev portfolioPrev_travel">
                 <div class="portfolioPrev__descr"><span class="portfolioPrev__title subtitle">Fulwidth slides</span><span class="portfolioPrev__name text">Travel</span>
-                  <div class="portfolioPrev__controls"><a class="portfolioPrev__popup" href="#travel">
-                      <button class="portfolioPrev__btn portfolioPrev__btn_view">
-                        <svg class="icon icon-search ">
-                          <use xlink:href="static/svg/symbol/sprite.svg#search"></use>
-                        </svg>
-                      </button></a>
-                    <button class="portfolioPrev__btn portfolioPrev__btn_link">
-                      <svg class="icon icon-link-symbol ">
-                        <use xlink:href="static/svg/symbol/sprite.svg#link-symbol"></use>
+                  <div class="portfolioPrev__controls">
+                    <button class="portfolioPrev__btn">
+                      <svg class="icon icon-search ">
+                        <use xlink:href="static/svg/symbol/sprite.svg#search"></use>
                       </svg>
                     </button>
                   </div>
@@ -260,15 +255,10 @@
             <div class="portfolio__prevItem" data-slide="1">
               <div class="portfolioPrev portfolioPrev_fashion">
                 <div class="portfolioPrev__descr"><span class="portfolioPrev__title subtitle">Fulwidth slides</span><span class="portfolioPrev__name text">Fashion</span>
-                  <div class="portfolioPrev__controls"><a class="portfolioPrev__popup" href="#fashion">
-                      <button class="portfolioPrev__btn portfolioPrev__btn_view">
-                        <svg class="icon icon-search ">
-                          <use xlink:href="static/svg/symbol/sprite.svg#search"></use>
-                        </svg>
-                      </button></a>
-                    <button class="portfolioPrev__btn portfolioPrev__btn_link">
-                      <svg class="icon icon-link-symbol ">
-                        <use xlink:href="static/svg/symbol/sprite.svg#link-symbol"></use>
+                  <div class="portfolioPrev__controls">
+                    <button class="portfolioPrev__btn">
+                      <svg class="icon icon-search ">
+                        <use xlink:href="static/svg/symbol/sprite.svg#search"></use>
                       </svg>
                     </button>
                   </div>
@@ -292,15 +282,10 @@
             <div class="portfolio__prevItem" data-slide="2">
               <div class="portfolioPrev portfolioPrev_fantasy">
                 <div class="portfolioPrev__descr"><span class="portfolioPrev__title subtitle">Fulwidth slides</span><span class="portfolioPrev__name text">Fantasy</span>
-                  <div class="portfolioPrev__controls"><a class="portfolioPrev__popup" href="#fantasy">
-                      <button class="portfolioPrev__btn portfolioPrev__btn_view">
-                        <svg class="icon icon-search ">
-                          <use xlink:href="static/svg/symbol/sprite.svg#search"></use>
-                        </svg>
-                      </button></a>
-                    <button class="portfolioPrev__btn portfolioPrev__btn_link">
-                      <svg class="icon icon-link-symbol ">
-                        <use xlink:href="static/svg/symbol/sprite.svg#link-symbol"></use>
+                  <div class="portfolioPrev__controls">
+                    <button class="portfolioPrev__btn">
+                      <svg class="icon icon-search ">
+                        <use xlink:href="static/svg/symbol/sprite.svg#search"></use>
                       </svg>
                     </button>
                   </div>
@@ -324,15 +309,10 @@
             <div class="portfolio__prevItem" data-slide="3">
               <div class="portfolioPrev portfolioPrev_animate">
                 <div class="portfolioPrev__descr"><span class="portfolioPrev__title subtitle">Fulwidth slides</span><span class="portfolioPrev__name text">Animate</span>
-                  <div class="portfolioPrev__controls"><a class="portfolioPrev__popup" href="#animate">
-                      <button class="portfolioPrev__btn portfolioPrev__btn_view">
-                        <svg class="icon icon-search ">
-                          <use xlink:href="static/svg/symbol/sprite.svg#search"></use>
-                        </svg>
-                      </button></a>
-                    <button class="portfolioPrev__btn portfolioPrev__btn_link">
-                      <svg class="icon icon-link-symbol ">
-                        <use xlink:href="static/svg/symbol/sprite.svg#link-symbol"></use>
+                  <div class="portfolioPrev__controls">
+                    <button class="portfolioPrev__btn">
+                      <svg class="icon icon-search ">
+                        <use xlink:href="static/svg/symbol/sprite.svg#search"></use>
                       </svg>
                     </button>
                   </div>
@@ -356,15 +336,10 @@
             <div class="portfolio__prevItem" data-slide="4">
               <div class="portfolioPrev portfolioPrev_extreme">
                 <div class="portfolioPrev__descr"><span class="portfolioPrev__title subtitle">Fulwidth slides</span><span class="portfolioPrev__name text">Extreme</span>
-                  <div class="portfolioPrev__controls"><a class="portfolioPrev__popup" href="#extreme">
-                      <button class="portfolioPrev__btn portfolioPrev__btn_view">
-                        <svg class="icon icon-search ">
-                          <use xlink:href="static/svg/symbol/sprite.svg#search"></use>
-                        </svg>
-                      </button></a>
-                    <button class="portfolioPrev__btn portfolioPrev__btn_link">
-                      <svg class="icon icon-link-symbol ">
-                        <use xlink:href="static/svg/symbol/sprite.svg#link-symbol"></use>
+                  <div class="portfolioPrev__controls">
+                    <button class="portfolioPrev__btn">
+                      <svg class="icon icon-search ">
+                        <use xlink:href="static/svg/symbol/sprite.svg#search"></use>
                       </svg>
                     </button>
                   </div>
@@ -388,15 +363,10 @@
             <div class="portfolio__prevItem" data-slide="5">
               <div class="portfolioPrev portfolioPrev_support">
                 <div class="portfolioPrev__descr"><span class="portfolioPrev__title subtitle">Fulwidth slides</span><span class="portfolioPrev__name text">Support</span>
-                  <div class="portfolioPrev__controls"><a class="portfolioPrev__popup" href="#support">
-                      <button class="portfolioPrev__btn portfolioPrev__btn_view">
-                        <svg class="icon icon-search ">
-                          <use xlink:href="static/svg/symbol/sprite.svg#search"></use>
-                        </svg>
-                      </button></a>
-                    <button class="portfolioPrev__btn portfolioPrev__btn_link">
-                      <svg class="icon icon-link-symbol ">
-                        <use xlink:href="static/svg/symbol/sprite.svg#link-symbol"></use>
+                  <div class="portfolioPrev__controls">
+                    <button class="portfolioPrev__btn">
+                      <svg class="icon icon-search ">
+                        <use xlink:href="static/svg/symbol/sprite.svg#search"></use>
                       </svg>
                     </button>
                   </div>
@@ -420,15 +390,10 @@
             <div class="portfolio__prevItem" data-slide="6">
               <div class="portfolioPrev portfolioPrev_content">
                 <div class="portfolioPrev__descr"><span class="portfolioPrev__title subtitle">Fulwidth slides</span><span class="portfolioPrev__name text">Content</span>
-                  <div class="portfolioPrev__controls"><a class="portfolioPrev__popup" href="#content">
-                      <button class="portfolioPrev__btn portfolioPrev__btn_view">
-                        <svg class="icon icon-search ">
-                          <use xlink:href="static/svg/symbol/sprite.svg#search"></use>
-                        </svg>
-                      </button></a>
-                    <button class="portfolioPrev__btn portfolioPrev__btn_link">
-                      <svg class="icon icon-link-symbol ">
-                        <use xlink:href="static/svg/symbol/sprite.svg#link-symbol"></use>
+                  <div class="portfolioPrev__controls">
+                    <button class="portfolioPrev__btn">
+                      <svg class="icon icon-search ">
+                        <use xlink:href="static/svg/symbol/sprite.svg#search"></use>
                       </svg>
                     </button>
                   </div>
@@ -450,26 +415,21 @@
               <button class="portfolioItem__close closeBtn">Close pop up</button>
             </div>
             <div class="portfolio__prevItem" data-slide="7">
-              <div class="portfolioPrev portfolioPrev_outsourcing">
-                <div class="portfolioPrev__descr"><span class="portfolioPrev__title subtitle">Fulwidth slides</span><span class="portfolioPrev__name text">Outsourcing</span>
-                  <div class="portfolioPrev__controls"><a class="portfolioPrev__popup" href="#outsourcing">
-                      <button class="portfolioPrev__btn portfolioPrev__btn_view">
-                        <svg class="icon icon-search ">
-                          <use xlink:href="static/svg/symbol/sprite.svg#search"></use>
-                        </svg>
-                      </button></a>
-                    <button class="portfolioPrev__btn portfolioPrev__btn_link">
-                      <svg class="icon icon-link-symbol ">
-                        <use xlink:href="static/svg/symbol/sprite.svg#link-symbol"></use>
+              <div class="portfolioPrev portfolioPrev_business">
+                <div class="portfolioPrev__descr"><span class="portfolioPrev__title subtitle">Fulwidth slides</span><span class="portfolioPrev__name text">Business</span>
+                  <div class="portfolioPrev__controls">
+                    <button class="portfolioPrev__btn">
+                      <svg class="icon icon-search ">
+                        <use xlink:href="static/svg/symbol/sprite.svg#search"></use>
                       </svg>
                     </button>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="portfolio__slideItem portfolioItem" id="outsourcing" data-slide="7">
+            <div class="portfolio__slideItem portfolioItem" id="business" data-slide="7">
                   <div class="title portfolioItem__title">
-                    <h2 class="title__main">Outsourcing</h2>
+                    <h2 class="title__main">Business</h2>
                   </div>
               <div class="portfolioItem__slider">
                 <div class="portfolioItem__pic portfolioItem__pic_1">Slide1 text</div>
@@ -725,7 +685,7 @@
                   </svg></span>
               </button>
         </form>
-        <div class="contactBlock__callback callback">
+        <div class="contactBlock__callback callback" id="callback">
           <div class="callback__wrap callback__wrap_success">
             <div class="callback__item callback__item_success">
               <button class="callback__closeBtn closeBtn">Close pop up</button>
@@ -796,7 +756,6 @@
     <script src="static/libs/aos/aos.js"></script><!-- endbuild-->
 <!-- build:js js/slow-libs.js async-->
     <script src="static/libs/validate/jquery.validate.min.js"></script>
-    <script src="static/libs/magnific/jquery.magnific-popup.min.js"></script>
     <script src="static/libs/slick/slick.min.js"></script>
     <script src="static/js/mainMy.js"></script><!-- endbuild-->
     <script>AOS.init({disable: 'mobile'})</script>
