--- a/dev/index.html
+++ b/dev/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" type="text/css" href="main/css/reset.css">
     <link rel="stylesheet" type="text/css" href="static/fonts/fonts.css">
     <link rel="stylesheet" type="text/css" href="main/css/main.css">
-    <title>Главная страница
+    <title>Templt
     </title>
   </head>
   <body>
